# simple_onnx_infer_cpp

./: .gitignore  CMakeLists.txt  README.md  aes.cpp  aes.h  common.h  my_interface.cpp  my_interface.h  my_memory.cpp  my_memory.h  my_onnx_inference.cpp  my_onnx_inference.h  my_utils.cpp  my_utils.h
lib/: readme.md
